# Parallel-Sumo

./: .clangd  .gitignore  CMakeLists.txt  DIST_README.md  Makefile  Makefile_win  ParallelSim.cpp  ParallelSim.h  PartitionManager.cpp  PartitionManager.h  README.md  build.sh  clean.sh  compile_commands.json  configure.sh  launch.ps1  launch.sh  log.txt  main.cpp  measure-performance.py  performance-measures-launch.ps1  performance-measures-launch.sh  run-with-env.sh  socket.cpp  tinyxml2.h  trips.trips.xml  utils.h  valgrind-memcheck.sh
.github/workflows/: build.yml
.obsolete/: Makefile  Makefile_win
assets/: simpleNet.net.xml  simpleNet.rou.xml  simpleNet.sumocfg  spider0.net.xml  spider0.rou.xml  spider0.sumocfg  spider1.net.xml  spider1.rou.xml  spider1.sumocfg  spider2.rou.xml  spider2.sumocfg  testMultipartRoutes.net.xml  testMultipartRoutes.rou.xml  testMultipartRoutes.sumocfg  testNet2.net.xml  testNet2.rou.xml  testNet2.sumocfg
assets/bologna-sim/: bbox.txt  build.bat  osm.passenger.trips.xml  osm.polycfg  osm.sumocfg  osm_uturn.conn.xml  osm_uturn.netccfg  vtype.add.xml
assets/osm-bologna-ing/: build.bat  info.txt  osm.net.xml  osm.netccfg  osm.passenger.trips.xml  osm.poly.xml  osm.polycfg  osm.sumocfg  osm.truck.trips.xml
assets/test/: README.txt
assets/test/bologna-sim/: osm.netccfg
experiment/: sample_log.txt  sizeof_struct_string.cpp  test_mpi_static_class.cpp  zmq_data_client.cpp  zmq_data_server.cpp
libs/: Pthread_barrier.cpp  Pthread_barrier.h  Pthread_barrier.h.disabled  socket.h  tinyxml2.cpp  tinyxml2.h  wininit.h
libs/traciapi/: TraCIAPI.cpp  config.h
libs/traciapi/foreign/tcpip/: socket.cpp  socket.h
scripts/: Random-Simulation.ps1  _cutRoutes.py  convertToMetis.py  createParts.py  cutRoutes.py  dist.sh  gather-msgcounts.py  gather-simtimes.py  gather-stepvehicles.py  gather-times.py  gatherStepVehicles.py  install-pymetis.ps1  metisLibraryFixer.py  partitiondatagen.py  partroutes.py  prefixing.py  processNeighbors.py  pymetisdoc.py  randomSimulation.sh  requirements-nb.txt  requirements.txt  sumo2png.py  sumobin.py  test-partitions.py  test_metis.ipynb  test_partitions.py  test_plot_parts.ipynb  test_simtime.ipynb  test_sumolib.ipynb  update-cpp-libs.sh  valgrind-memcheck.sh
src/: ContextPool.cpp  ContextPool.hpp  NeighborPartitionHandler.cpp  NeighborPartitionHandler.hpp  ParallelSim.cpp  ParallelSim.h  ParallelSim.hpp  PartRoutes.cpp  PartitionEdgesStub.cpp  PartitionEdgesStub.hpp  PartitionManager.cpp  PartitionManager.h  PartitionManager.hpp  SumoConnectionRouter.cpp  SumoConnectionRouter.hpp  args.hpp  globals.hpp  main.cpp  messagingShared.cpp  messagingShared.hpp  partArgs.hpp  partitionMain.cpp  psumoTypes.hpp  utils.cpp  utils.hpp
testResults/: test1.csv  test2.csv  test3.csv  test4.csv  test5.csv  test5_parts.csv  test6.csv  test6_parts.csv
